# xos

./: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  build-ios.sh  cli.sh  coordinate_systems.py  game.py  pyproject.toml  record.py  transcribe.py  transcription.py  wasm.py  whisper.py
.cargo/: config.toml
.githooks/: pre-commit
crates/xos-transcription-whisper/: Cargo.toml
crates/xos-transcription-whisper/src/: convert.rs  ensure.rs  lib.rs
crates/xos-whisper-burn/: Cargo.toml  README.md
crates/xos-whisper-burn/src/: audio.rs  helper.rs  token.rs  transcribe.rs
crates/xos-whisper-burn/src/model/: mod.rs
docs/: authentication.md  importing_models.md
example-scripts/: ball.py  ball_lines.py  ballines.py  dual_viewport.py  example.py  headless_app_flag.py  text.py  transcribe.py  whisper.py
ios/: CLIPBOARD_SETUP.md  Podfile  README.md  Xos.podspec  create-xcode-project.sh  launch-device.sh  pod-install.sh  project.yml  setup-signing.sh
native-bridge/: App.js  app.json  package-lock.json  package.json
patches/gpu-allocator/: Cargo.toml
patches/gpu-allocator/src/allocator/: mod.rs
python/: array_test.py  ball.py  (+25 more)
src/crates/xos-app/: Cargo.toml
src/crates/xos-app/src/: game_runner.rs  ios_ffi.rs  lib.rs  python_text.rs  python_ui.rs  start.rs
src/crates/xos-app/src/apps/: audio_relay.rs  ball.rs  blank.rs  camera.rs  crash.rs  cursor.rs  hang.rs  ios_remote.rs  ios_sensors.rs  leds.rs  mod.rs  overlay.rs  python_apps.rs  scroll.rs  text_mesh.rs  tracers.rs  transcribe.rs  vad.rs  wireframe.rs  wireframe_text.rs  xpy_wasm.rs
src/crates/xos-app/src/apps/audioeditor/: audioedit.rs  track_visualizer.rs
src/crates/xos-app/src/apps/audiovis/: audiovis.rs  convolutional_waveform.rs  media_control_bar.rs  waveform.rs
src/crates/xos-app/src/apps/coder/: coder.rs  explorer.rs  mod.rs  shortcuts.rs
src/crates/xos-app/src/apps/mesh/: app.rs  mesh.py  mod.rs
src/crates/xos-app/src/apps/partitions/: partition.rs  partition_viewports.rs  partitions.rs
src/crates/xos-app/src/apps/remote/: devices.py  launcher.rs  mod.rs  remote.py  source.py
src/crates/xos-app/src/apps/study/: launcher.rs  magnifier.py  mod.rs  study.py
src/crates/xos-app/src/apps/text/: launcher.rs  readonly_embed.rs  text.rs
src/crates/xos-app/src/apps/transcription/: mod.rs  transcribe.rs  vad.rs
src/crates/xos-app/src/apps/triangles/: triangles.rs
src/crates/xos-app/src/apps/waveform/: canvas.rs  mod.rs
src/crates/xos-app/src/apps/whiteboard/: launcher.rs  mod.rs
src/crates/xos-app/src/apps/xpy/: launcher.rs
src/crates/xos-audio/: Cargo.toml
src/crates/xos-audio/src/: lib.rs  macos_sck.rs  microphone.rs
src/crates/xos-auth/: Cargo.toml
src/crates/xos-auth/src/: lib.rs  store.rs
src/crates/xos-cli/: Cargo.toml
src/crates/xos-cli/src/: apps_cli.rs  compile.rs  lib.rs  main.rs
src/crates/xos-core/: Cargo.toml
src/crates/xos-core/patches/ct2rs/: Cargo 2.toml
src/crates/xos-core/patches/ct2rs/src/sys/: types.rs
src/crates/xos-core/patches/pixels/: Cargo.toml
src/crates/xos-core/patches/pixels/pixels-0.15.0/: .cargo_vcs_info.json
src/crates/xos-core/patches/pixels/src/: builder.rs  lib.rs  renderers.rs
src/crates/xos-core/patches/sentencepiece-sys/: Cargo.toml
src/crates/xos-core/src/: blank_app.rs  burn_raster.rs  clipboard.rs  coder_log.rs  fs.rs  gpu_present.rs  ios_log.rs  lib.rs  manager.rs  monitors.rs  named_colors.rs  remote_capture.rs  remote_input.rs  runtime_config.rs  time.rs  ui_module.rs  viewport.rs
src/crates/xos-core/src/ai/: mod.rs
src/crates/xos-core/src/ai/transcription/: mod.rs
src/crates/xos-core/src/ai/transcription/burn/: mod.rs  whisper.rs  whisper_ensure.rs
src/crates/xos-core/src/ai/transcription/burn/whisper_burn/: audio.rs  beam.rs  helper.rs  model.rs
src/crates/xos-core/src/ai/transcription/burn/whisper_burn/vad/: silero_vad_op18_ifless.rs  util.rs
src/crates/xos-core/src/ai/transcription/ct2/: mod.rs  whisper.rs  whisper_ct2_download_links.json  whisper_ensure.rs
src/crates/xos-core/src/ai/transcription/silero/: ensure.rs  onnx.rs  silero_vad_download_links.json
src/crates/xos-core/src/engine/: engine.rs  f3_menu.rs  mod.rs  native_engine.rs  wasm_engine.rs
src/crates/xos-core/src/engine/keyboard/: mod.rs
src/crates/xos-core/src/engine/sensors/: ios_magnetometer.rs  mod.rs
src/crates/xos-core/src/partitions/: partitions.rs
src/crates/xos-core/src/random/: mod.rs  wasm_random.rs
src/crates/xos-core/src/rasterizer/: blur.rs  cache.rs  mod.rs
src/crates/xos-core/src/rasterizer/shapes/: circles.rs  mod.rs  rectangles.rs  triangles.rs
src/crates/xos-core/src/rasterizer/text/: fonts.rs  ui_markup.rs
src/crates/xos-core/src/ui/: audio_selector.rs  button.rs  onscreen_keyboard.rs  transcribe_lang.rs
src/crates/xos-java/: Cargo.toml
src/crates/xos-java/src/: lib.rs
src/crates/xos-mesh/: Cargo.toml
src/crates/xos-mesh/src/: lan.rs  lan_crypto.rs  lib.rs  local.rs  nodes.rs  relay.rs  state.rs  wire_frame.rs
src/crates/xos-python/: Cargo.toml
src/crates/xos-python/src/: ai.rs  auth.rs  burn_train.rs  colors.rs  csv_api.rs  data.rs  dialoguer.rs  dtypes.rs  json_api.rs  json_codec.rs  lib.rs  manager.rs  math.rs  mouse.rs  path.rs  python_whiteboard.rs  rasterizer.rs  regex.rs  repl.rs  runtime.rs  staged_native_python_app.rs  system.rs  tensor_buf.rs  tensors.rs  terminal.rs  ui_events.rs  whiteboard_kernel.rs  xos_module.rs
src/crates/xos-python/src/audio/: microphone.rs  mod.rs  recording.rs  speakers.rs  transcription.rs
src/crates/xos-python/src/engine/: py_bindings.rs  py_engine_tls.rs  pyapp.rs
src/crates/xos-python/src/geom/: mod.rs  rect.rs
src/crates/xos-python/src/mesh/: mod.rs
src/crates/xos-python/src/nn/: activations.rs
src/crates/xos-python/src/nn/layers/: conv.rs  linear.rs
src/crates/xos-python/src/ops/: conv.rs  conv_metal.rs  mod.rs  shift.rs
src/crates/xos-python/src/random/: random.rs
src/crates/xos-tensor/: Cargo.toml
src/crates/xos-tensor/src/: conv.rs  lib.rs
src/crates/xos-wasm/: Cargo.toml
src/crates/xos-wasm/src/: lib.rs
(+535 files in other folders)
