[package]
name = "xos"
version = "0.3.17"
edition = "2021"
description = "Python, cross-platform (+ios📱) with built-in viewports, audio drivers, ai/ml/sci compute operations, graphics, text rasterization, and more- tensorized and accelerator ready. Let's see what you can build!"
repository = "https://github.com/xlateai/xos"
authors = ["Dyllan McCreary <dyllan@xlate.ai>"]
license = "MIT"
default-run = "xos"

[dependencies]
burn         = { version = "=0.21.0-pre.3", default-features = false, features = ["std", "wgpu", "autotune", "ndarray", "autodiff"] }
burn-store   = { version = "=0.21.0-pre.3", features = ["burnpack", "pytorch"] }
burn-cubecl  = { version = "=0.21.0-pre.3" }
burn-fusion  = { version = "=0.21.0-pre.3" }
burn-ir      = { version = "=0.21.0-pre.3" }
burn-backend = { version = "=0.21.0-pre.3" }
burn-autodiff = { version = "=0.21.0-pre.3", default-features = false }
burn-ndarray = { version = "=0.21.0-pre.3", default-features = false }
burn-wgpu    = { version = "=0.21.0-pre.3", default-features = false, features = ["std", "autotune"] }
cubecl       = { version = "=0.10.0-pre.3", features = ["stdlib"] }
pixels = "0.15.0"
winit = "0.30.12"
winapi = { version = "0.3.9", features = ["winuser", "wingdi", "winbase"] }
clap = { version = "4.4.10", features = ["derive"] }
dialoguer = "0.11"
tiny_http = "0.12"
webbrowser = "1.0.6"
once_cell = "1.19"
fontdue = "0.9.3"
delaunator = "1.0"
rustpython-vm = "0.3.0"
ringbuf = "0.3"
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
# Keep these in the workspace graph; MSVC release `strip` on proc-macro crates can cause E0463
# (`can't find crate for ...`) for Burn/CubeCL — see profile.release.package.* below.
darling = "0.21.3"
variadics_please = "1"

# -------------------------------------------------------------------
# Unix TTY size (`ioctl` TIOCGWINSZ) for xos.terminal.* on macOS/Linux/*BSD
# -------------------------------------------------------------------
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# -------------------------------------------------------------------
# Non-WASM native dependencies
# -------------------------------------------------------------------
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9.2"
rand_chacha = "0.3"
rand_core = "0.6"
getrandom = "0.3.4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
webrtc = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
# Offline identity + LAN mesh crypto (RSA handshake, AES-GCM wire)
rsa = { version = "0.9", features = ["pem", "sha2"] }
argon2 = "0.5"
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
dirs = "5"
rand_pcg = "0.9.0"
rayon = "1.10"
image = { version = "0.25", features = ["default-formats"] }
ctrlc = "3.4"

# -------------------------------------------------------------------
# Desktop-only dependencies (exclude iOS)
# -------------------------------------------------------------------
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
nokhwa = { version = "0.10.7", features = ["input-native"] }
rfd = "0.16.0"
mp3lame-encoder = "0.2.3"
ureq = { version = "2.12", optional = true }
half = { version = "2", optional = true }
hound = { version = "3.5.1", optional = true }
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"], optional = true }
strum = { version = "0.28.0", optional = true }
strum_macros = { version = "0.28.0", optional = true }
log = { version = "0.4", optional = true }
mt19937 = { version = "3.3.0", optional = true }
ct2rs = { version = "0.9.18", optional = true, default-features = false, features = ["whisper", "ruy"] }
zip = { version = "2.2", optional = true, default-features = false, features = ["deflate"] }
# Silero VAD (ONNX) — CPU via ONNX Runtime; `download-binaries` bundles ORT for the host target at build time.
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std", "download-binaries", "tls-rustls", "api-24"] }
# Desktop file decode (Python `xos.audio.load`, audiovis / audioeditor) — pure Rust, no rodio.
symphonia = { version = "0.5.4", default-features = false, features = ["aac", "alac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios"), any(target_os = "macos", target_os = "windows")))'.dependencies]
cpal = "0.16.0"

# -------------------------------------------------------------------
# Apple platforms → Metal backend automatically enabled
# -------------------------------------------------------------------
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
metal = "0.32.0"
objc = "0.2"

# iOS: same `~/.xos` / `xos path --data` model cache as desktop (`models/whisper/{size}-ct2/`),
# with first-run download via `ureq` + `zip` + `ct2rs` (CT2 only; Burn/WGPU is desktop-only).
[target.'cfg(target_os = "ios")'.dependencies]
ct2rs = { version = "0.9.18", optional = true, default-features = false, features = ["whisper", "ruy"] }
ureq = { version = "2.12", optional = true }
zip = { version = "2.2", optional = true, default-features = false, features = ["deflate"] }
half = { version = "2", optional = true }
hound = { version = "3.5.1", optional = true }
strum = { version = "0.28.0", optional = true }
strum_macros = { version = "0.28.0", optional = true }
log = { version = "0.4", optional = true }
mt19937 = { version = "3.3.0", optional = true }

# Remote desktop: capture + synthetic input (desktop macOS only; not iOS)
[target.'cfg(target_os = "macos")'.dependencies]
# CGWindowList-based capture (full desktop); grant Screen Recording for the xos binary.
xcap = "0.9.4"
enigo = "0.1"
# System audio capture for input device list (ScreenCaptureKit; macOS 13+).
screencapturekit = { version = "1.5.4", features = ["macos_13_0"] }

# -------------------------------------------------------------------
# WebAssembly target
# -------------------------------------------------------------------
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
uuid = { version = "1", features = ["v4", "js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "AudioBuffer",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "ImageData",
  "Document",
  "Window",
  "MouseEvent",
  "Navigator",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "HtmlVideoElement",
  "HtmlMediaElement",
  "TouchEvent",
  "Touch",
  "TouchList",
  "DomRect",
  "AudioContext",
  "AudioNode",
  "AudioDestinationNode",
  "AudioProcessingEvent",
  "ScriptProcessorNode",
  "MediaStreamAudioSourceNode",
  "console",
] }
console_error_panic_hook = "0.1"

[features]
default = ["whisper", "whisper_burn", "whisper_ct2"]
## Shared stack for live CT2 + resampling + (optional) Silero — **no** `tokenizers` / sentencepiece (avoids iOS `sentencepiece-sys`/cmake issues).
## Burn/WGPU is gated behind `whisper_burn` (pulls `tokenizers` for BPE only on desktop).
whisper = [
    "dep:ureq",
    "dep:half",
    "dep:hound",
    "dep:strum",
    "dep:strum_macros",
    "dep:log",
    "dep:mt19937",
]
## In-tree `whisper_burn` + WGPU + HuggingFace `tokenizers` (native sentencepiece). Desktop-class builds only; not used for iOS CT2.
whisper_burn = ["whisper", "dep:tokenizers"]
## CTranslate2 Whisper (`ct2rs`). Cache: `xos path --data` → `models/whisper/{size}-ct2/`; first run downloads a ZIP from `ct2/whisper_ct2_download_links.json` and extracts (needs `ureq` + `zip`). Optional bundled tree: `src/core/ai/transcription/models/ct2/`.
whisper_ct2 = ["dep:ct2rs", "dep:ureq", "dep:zip"]
## Silero VAD ONNX (`models/silero-vad/silero_vad.onnx`). See `transcription/silero/silero_vad_download_links.json`. Implies `whisper`.
silero_vad = ["dep:ort", "dep:ureq", "whisper"]

[lib]
path = "src/core/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "xos"
path = "src/main.rs"

[[bin]]
name = "xpy"
path = "src/main.rs"

[[bin]]
name = "xrs"
path = "src/main.rs"

[workspace]
members = [".", "src/core/crates/xos-java"]
resolver = "2"

# gpu-allocator 0.27 allows windows 0.53–0.58; Cargo resolves 0.54 while wgpu-hal 26 uses 0.58, so DX12 types
# from two `windows` versions don't unify. Patch pins 0.27.0 to windows 0.58 (see src/core/patches/gpu-allocator/Cargo.toml).
[patch.crates-io]
gpu-allocator = { path = "src/core/patches/gpu-allocator" }
# iOS: Rust `cmake` uses Makefiles/Ninja, not the Xcode generator — upstream calls set_xcode_property
# for iOS, which is undefined unless CMAKE_GENERATOR is Xcode.
sentencepiece-sys = { path = "src/core/patches/sentencepiece-sys" }
# iOS: ruy's cpuinfo tools break CMake configure (MACOSX_BUNDLE + INSTALL); disable tools, keep the library.
ct2rs = { path = "src/core/patches/ct2rs" }

# Windows MSVC + release: stripping proc-macro rlibs/DLLs breaks rustc's ability to load them
# (E0463), which then breaks downstream crates (e.g. cubecl-ir / darling).
[profile.release.package.cubecl-macros]
strip = false
[profile.release.package.variadics_please]
strip = false
[profile.release.package.darling_macro]
strip = false
