[package]
name = "xos"
version = "0.3.19-pre2"
edition = "2021"
description = "Python, cross-platform (+ios📱) with built-in viewports, audio drivers, ai/ml/sci compute operations, graphics, text rasterization, and more- tensorized and accelerator ready. Let's see what you can build!"
repository = "https://github.com/xlateai/xos"
authors = ["Dyllan McCreary <dyllan@xlate.ai>"]
license = "MIT"
default-run = "xos"

[dependencies]
xos-core = { path = "src/crates/xos-core" }
xos-app = { path = "src/crates/xos-app" }
xos-python = { path = "src/crates/xos-python" }
xos-auth = { path = "src/crates/xos-auth" }
xos-mesh = { path = "src/crates/xos-mesh" }
xos-tensor = { path = "src/crates/xos-tensor" }
xos-audio = { path = "src/crates/xos-audio" }
clap = { version = "4.4.10", features = ["derive"] }
dialoguer = "0.11"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tiny_http = "0.12"
darling = "0.21.3"
variadics_please = "1"
burn-fusion = { version = "=0.21.0-pre.3" }
burn-ir = { version = "=0.21.0-pre.3" }
burn-backend = { version = "=0.21.0-pre.3" }
burn-autodiff = { version = "=0.21.0-pre.3", default-features = false }
burn-ndarray = { version = "=0.21.0-pre.3", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
base64 = "0.22"
ctrlc = "3.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4.2", features = ["wasm_js"] }
uuid = { version = "1", features = ["v4", "js"] }

[features]
default = ["whisper", "whisper_ct2"]
whisper = ["xos-core/whisper", "xos-python/whisper"]
whisper_burn = ["whisper", "xos-core/whisper_burn", "xos-python/whisper_burn"]
whisper_ct2 = ["whisper", "xos-core/whisper_ct2", "xos-python/whisper_ct2", "xos-app/whisper_ct2"]
silero_vad = ["whisper", "xos-core/silero_vad", "xos-app/silero_vad"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "xos"
path = "src/main.rs"

[[bin]]
name = "xpy"
path = "src/main.rs"

[[bin]]
name = "xrs"
path = "src/main.rs"

[workspace]
members = [
  ".",
  "src/crates/xos-core",
  "src/crates/xos-auth",
  "src/crates/xos-mesh",
  "src/crates/xos-tensor",
  "src/crates/xos-audio",
  "src/crates/xos-python",
  "src/crates/xos-app",
  "src/crates/xos-java",
]
resolver = "2"

[patch.crates-io]
gpu-allocator = { path = "src/crates/xos-core/patches/gpu-allocator" }
sentencepiece-sys = { path = "src/crates/xos-core/patches/sentencepiece-sys" }
ct2rs = { path = "src/crates/xos-core/patches/ct2rs" }

# Windows MSVC + release: stripping proc-macro rlibs/DLLs breaks rustc's ability to load them
# (E0463), which then breaks downstream crates (e.g. cubecl-ir / darling).
# Faster release compiles (same `xos compile` / `cargo build --release`); minor runtime tradeoff.
[profile.release]
codegen-units = 256
lto = false

[profile.release.package.cubecl-macros]
strip = false
[profile.release.package.variadics_please]
strip = false
[profile.release.package.darling_macro]
strip = false
