[package]
name = "xos-transcription-whisper"
version = "0.1.0"
edition = "2021"
description = "Whisper decode thread for xos using fast-whisper-burn (Burn + WGPU)."

[dependencies]
# Must match `fast-whisper-burn` / rev so Cargo unifies one Burn graph.
burn = { git = "https://github.com/tracel-ai/burn.git", rev = "9deccba", default-features = false, features = ["std", "wgpu", "autotune", "ndarray"] }
burn-store = { git = "https://github.com/tracel-ai/burn.git", rev = "9deccba", features = ["burnpack", "pytorch"] }
fast-whisper-burn = { path = "../../fast-whisper-burn" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = "2.12"
