[package]
name = "xos-transcription-whisper"
version = "0.1.0"
edition = "2021"
description = "Whisper decode thread for xos using fast-whisper-burn (Burn + WGPU)."

[dependencies]
# Must match `fast-whisper-burn` / root so Cargo unifies one Burn graph.
burn = { version = "=0.21.0-pre.3", default-features = false, features = ["std", "wgpu", "autotune", "ndarray", "fusion"] }
burn-store = { version = "=0.21.0-pre.3", features = ["burnpack", "pytorch"] }
fast-whisper-burn = { path = "vendor/fast-whisper-burn" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = "2.12"
