[package]
name = "xos-app"
version = "0.3.19-pre2"
edition = "2021"
license = "MIT"

[dependencies]
xos-core = { path = "../xos-core" }
xos-python = { path = "../xos-python" }
xos-auth = { path = "../xos-auth" }
xos-mesh = { path = "../xos-mesh" }
xos-tensor = { path = "../xos-tensor" }
xos-audio = { path = "../xos-audio" }
clap = { version = "4.4.10", features = ["derive"] }
rustpython-vm = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["default-formats"] }
regex = "1"
fontdue = "0.9.3"
delaunator = "1.0"
include_dir = "0.7"
winit = "0.30.12"
pixels = "0.15.0"
once_cell = "1.19"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
cpal = "0.16.0"
rfd = "0.16.0"
nokhwa = { version = "0.10.7", features = ["input-native"] }
ct2rs = { version = "0.9.18", optional = true, default-features = false, features = ["whisper", "ruy"] }
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std", "download-binaries", "tls-rustls", "api-24"] }

[target.'cfg(target_os = "macos")'.dependencies]
xcap = "0.9.4"
enigo = "0.1"
screencapturekit = { version = "1.5.4", features = ["macos_13_0"] }

[target.'cfg(target_os = "ios")'.dependencies]
serde_json = "1"

[features]
default = []
whisper_ct2 = ["dep:ct2rs"]
silero_vad = ["dep:ort"]
