[package]
name = "xos-auth"
version = "0.3.19-pre2"
edition = "2021"
license = "MIT"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
dirs = "5"
getrandom = "0.3.4"
rand_chacha = "0.3"
rand_core = "0.6"
rsa = { version = "0.9", features = ["pem", "sha2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
