[package]
name = "xos-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xos-auth = { path = "../xos-auth" }
xos-mesh = { path = "../xos-mesh" }
xos-tensor = { path = "../xos-tensor" }
xos-audio = { path = "../xos-audio" }
burn = { version = "=0.21.0-pre.3", default-features = false, features = ["std", "ndarray", "autodiff"] }
fontdue = "0.9.3"
delaunator = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["default-formats"] }
regex = "1"
once_cell = "1.19"
rustpython-vm = "0.3.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pixels = "0.15.0"
winit = "0.30.12"
clap = { version = "4.4.10", features = ["derive"] }
tiny_http = "0.12"
webbrowser = "1.0.6"
rand = "0.9.2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rayon = "1.10"
ctrlc = "3.4"
dirs = "5"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
nokhwa = { version = "0.10.7", features = ["input-native"] }
burn = { version = "=0.21.0-pre.3", default-features = false, features = ["wgpu", "autotune"] }
burn-wgpu = { version = "=0.21.0-pre.3", default-features = false, features = ["std", "autotune"] }
burn-cubecl = { version = "=0.21.0-pre.3", optional = true }
cubecl = { version = "=0.10.0-pre.3", features = ["stdlib"], optional = true }
cubecl-common = { version = "=0.10.0-pre.3", features = ["hash"], optional = true }
burn-store = { version = "=0.21.0-pre.3", optional = true, features = ["burnpack", "pytorch"] }
ureq = { version = "2.12", optional = true }
half = { version = "2", optional = true }
hound = { version = "3.5.1", optional = true }
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"], optional = true }
strum = { version = "0.28.0", optional = true }
strum_macros = { version = "0.28.0", optional = true }
log = { version = "0.4", optional = true }
mt19937 = { version = "3.3.0", optional = true }
ct2rs = { version = "0.9.18", optional = true, default-features = false, features = ["whisper", "ruy"] }
zip = { version = "2.2", optional = true, default-features = false, features = ["deflate"] }
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std", "download-binaries", "tls-rustls", "api-24"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
metal = "0.32.0"
objc = "0.2"

[target.'cfg(target_os = "ios")'.dependencies]
ringbuf = "0.3"
ct2rs = { version = "0.9.18", optional = true, default-features = false, features = ["whisper", "ruy"] }
ureq = { version = "2.12", optional = true }
zip = { version = "2.2", optional = true, default-features = false, features = ["deflate"] }
half = { version = "2", optional = true }
hound = { version = "3.5.1", optional = true }
strum = { version = "0.28.0", optional = true }
strum_macros = { version = "0.28.0", optional = true }
log = { version = "0.4", optional = true }
mt19937 = { version = "3.3.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
rayon = "1.10"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "HtmlVideoElement",
  "CanvasRenderingContext2d",
  "CssStyleDeclaration",
  "DomRect",
  "ImageData",
  "MouseEvent",
  "WheelEvent",
  "Touch",
  "TouchList",
  "TouchEvent",
  "KeyboardEvent",
  "ClipboardEvent",
  "DataTransfer",
  "Event",
  "Storage",
  "XmlHttpRequest",
  "Navigator",
  "Clipboard",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
] }

[features]
default = ["whisper", "whisper_ct2"]
whisper = ["dep:ureq", "dep:half", "dep:hound", "dep:strum", "dep:strum_macros", "dep:log", "dep:mt19937"]
whisper_burn = ["whisper", "dep:tokenizers", "dep:burn-store", "dep:burn-cubecl", "dep:cubecl", "dep:cubecl-common"]
whisper_ct2 = ["dep:ct2rs", "dep:ureq", "dep:zip"]
silero_vad = ["dep:ort", "dep:ureq", "whisper"]
