[package]
name = "xos-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xos-auth = { path = "../xos-auth" }
aes-gcm = "0.10"
base64 = "0.22"
hkdf = "0.12"
image = { version = "0.25", features = ["default-formats"] }
rsa = { version = "0.9", features = ["pem", "sha2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
getrandom = "0.3.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "io-util"] }
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
