[package]
name = "xos-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xos-core = { path = "../xos-core" }
xos-auth = { path = "../xos-auth" }
xos-mesh = { path = "../xos-mesh" }
xos-tensor = { path = "../xos-tensor" }
xos-audio = { path = "../xos-audio" }
base64 = "0.22"
burn = { version = "=0.21.0-pre.3", default-features = false, features = ["std", "ndarray", "autodiff"] }
burn-autodiff = { version = "=0.21.0-pre.3", default-features = false }
burn-ndarray = { version = "=0.21.0-pre.3", default-features = false }
burn-backend = { version = "=0.21.0-pre.3" }
csv = "1.3"
fontdue = "0.9.3"
image = { version = "0.25", features = ["default-formats"] }
include_dir = "0.7"
once_cell = "1.19"
pixels = "0.15.0"
regex = "1"
rustpython-vm = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winit = "0.30.12"
zune-core = { version = "0.4", default-features = false, features = ["std"] }
zune-jpeg = { version = "0.4", default-features = false, features = ["std"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dialoguer = "0.11"
rand = "0.9.2"
rayon = "1.10"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
burn = { version = "=0.21.0-pre.3", default-features = false, features = ["wgpu"] }
burn-wgpu = { version = "=0.21.0-pre.3", default-features = false, features = ["std"] }
burn-store = { version = "=0.21.0-pre.3", optional = true, features = ["burnpack", "pytorch"] }
mp3lame-encoder = "0.2.3"
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"], optional = true }
ct2rs = { version = "0.9.18", optional = true, default-features = false, features = ["whisper", "ruy"] }
ureq = { version = "2.12", optional = true }
zip = { version = "2.2", optional = true, default-features = false, features = ["deflate"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
metal = "0.32.0"
objc = "0.2"

[features]
default = []
whisper = []
whisper_burn = ["whisper", "dep:burn-store", "dep:tokenizers"]
whisper_ct2 = ["whisper", "dep:ct2rs", "dep:ureq", "dep:zip"]
